# Allelica-lib

./: README.md  pyproject.toml  requirements.txt  scan.html  setup.cfg  setup.py
src/allelica_lib/: parse.py
