[metadata]
name = Allelica-pkg-Nico.4D
version = 1.0.1
author = Nicolas Alejandro Rodriguez
author_email = info@4dingenieria.com.ar
description = Allelica Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/4DIngenieria/Allelica
project_urls =
    Bug Tracker = https://github.com/4DIngenieria/Allelica
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = ['openpyxl>=3.0.7', 'panda>=1.2.5', 'dask>=2021.6.2']

[options.packages.find]
where = src